Update swagger doc
