# pkg/router/handlers/ingress.go
@@ -90,7 +90,7 @@ func GetIngressList(ctx *gin.Context) {
 //  '200':
 //    description: ingresses
 //    schema:
-//      $ref: '#/definitions/IngressWithOwner'
+//      $ref: '#/definitions/Ingress'
 //  default:
 //    $ref: '#/responses/error'
 func GetIngress(ctx *gin.Context) {
@@ -142,12 +142,12 @@ func GetIngress(ctx *gin.Context) {
 //  - name: body
 //    in: body
 //    schema:
-//      $ref: '#/definitions/IngressWithOwner'
+//      $ref: '#/definitions/Ingress'
 // responses:
 //  '201':
 //    description: ingress created
 //    schema:
-//      $ref: '#/definitions/IngressWithOwner'
+//      $ref: '#/definitions/Ingress'
 //  default:
 //    $ref: '#/responses/error'
 func CreateIngress(ctx *gin.Context) {
@@ -212,12 +212,12 @@ func CreateIngress(ctx *gin.Context) {
 //  - name: body
 //    in: body
 //    schema:
-//      $ref: '#/definitions/IngressWithOwner'
+//      $ref: '#/definitions/Ingress'
 // responses:
 //  '201':
 //    description: ingress updated
 //    schema:
-//      $ref: '#/definitions/IngressWithOwner'
+//      $ref: '#/definitions/Ingress'
 //  default:
 //    $ref: '#/responses/error'
 func UpdateIngress(ctx *gin.Context) {
